frontend/src/components/ContentHeader.scss
@import "../shared/shared.scss";

$primary-color: #404A5D;
$link-color: #404A5D;
$link-hover: #6a7da0;

.header-root {
    width: 100%;
}

.header-pair {
    border-bottom: 1px solid $primary-color;
}

.header-primary {
    display: flex;
    flex-direction: row;
    align-content: flex-end;

    h1 {
        margin-left: 10px;
        margin-bottom: 5px;
        color: $primary-color;
    }

    h3 {
        margin-left: 10px;
        margin-bottom: 9px;
        color: $primary-color;
        font-weight: 400;
        align-self: flex-end;
    }
}

.header-secondary {
    width: 100%;
    display: flex;
    flex-direction: row;

    & > .header-left {
        display: flex;
        flex-direction: row;

        h3 {
            margin-left: 10px;
            margin-right: auto;
            margin-top: 0;
            margin-bottom: 5px;
        }

        .thin {
            font-weight: 300;
        }

        color: $primary-color;
    }

    & > .header-right {
        margin-right: 10px;
        display: flex;
        flex-direction: row;

        a {
            text-decoration: none;
            color: black;
            background-color: transparent;
        }

        a:link a:visited {
            color: $link-color;
            text-decoration: none;
        }

        a:hover {
            color: $link-hover;
            text-decoration: underline;
        }

        & > caption {
            margin-left: 5px;
            margin-right: 5px;
        }
    }
}

